--- a/program.html
+++ b/program.html
@@ -1,245 +1,297 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program</title>
-    <!-- CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- External CSS -->
-    <link rel="stylesheet" href="program.css">
-</head>
-<body>
-    <!-- Nav -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Ranking</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Discover</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                      Events
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1">PREPARE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">APPLY</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CAREERS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">COMMUNITY</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search"   aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-          </div>
-        </div>
-    </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Program</title>
+		<!-- CDN -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<!-- External CSS -->
+		<link rel="stylesheet" href="program.css" />
+	</head>
+	<body>
+		<!-- Nav -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#"><img src="img/logo.svg" alt="" /></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#"
+								>Ranking</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Discover</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								id="navbarDropdown"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false"
+							>
+								Events
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="#">Action</a></li>
+								<li><a class="dropdown-item" href="#">Another action</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li>
+									<a class="dropdown-item" href="#">Something else here</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" tabindex="-1">PREPARE</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">APPLY</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">CAREERS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">COMMUNITY</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search"
+						/>
+						<button class="btn btn-outline-success" type="submit">
+							Search
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
 
-    <main class="mb-4">
-        <!-- Banner -->
-        <div class="mb-4">
-            <img class="w-100" src="img/FindYourProgramNov2020.png" alt=""/>
-        </div>
+		<main class="mb-4">
+			<!-- Banner -->
+			<div class="mb-4">
+				<img class="w-100" src="img/FindYourProgramNov2020.png" alt="" />
+			</div>
 
-        <!-- Passion -->
-        <div class="mb-4">
-            <h2 class="p-2 border-bottom border-5 border-warning">A Program For Every Passion</h2>
-            <small>Browse our academic programs alphabetically by program name. Click a program name for more information.</small>
-            <!-- Alphabet Box -->
-            <div class="mt-3 mb-4 border border-secondary text-center">
-                <small class="p-2 fs-6">All A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</small>
-            </div>
-        </div>
+			<!-- Passion -->
+			<div class="mb-4">
+				<h2 class="p-2 border-bottom border-5 border-warning">
+					A Program For Every Passion
+				</h2>
+				<small
+					>Browse our academic programs alphabetically by program name. Click a
+					program name for more information.</small
+				>
+				<!-- Alphabet Box -->
+				<div class="mt-3 mb-4 border border-secondary text-center">
+					<small class="p-2 fs-6"
+						>All A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</small
+					>
+				</div>
+			</div>
 
-        <!-- Display For OnClick All Alphabates-->
-        <!-- <div class="mb-4 border border-secondary">
+			<!-- Display For OnClick All Alphabates-->
+			<!-- <div class="mb-4 border border-secondary">
             By default it will show thore are start with A alphabates
         </div> -->
-        
 
-        <!-- Program Related Box -->
-        <div class="row program-row">
-            <div class="row">
-                <!-- Title -->
-                <div class="row title p-3" id="title">
-                    <div class="col-lg-5">
-                        <strong>PROGRAM NAME </strong>
-                    </div>
-                    <div class="col-lg-4">
-                        <strong>FACULTY</strong>
-                    </div>
-                    <div class="col-lg-3">
-                        <strong>DEGREE</strong>
-                    </div>
-                    <hr class="mt-2 mb-2">
-                </div>
-                <!-- Programs -->
-                <div class="row p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Accounting</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Business Administration</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Actuarial Science</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Science</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                        <p>Masters Degree (2 Years)</p>
-                        <p>PhD Degree (3 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Administration (Indigenous Management) Certificate</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Centre for Continuing Education</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Certificate (1 - 2 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Advanced Certificate in Local Government Administration</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Centre for Continuing Education</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Certificate (1 - 2 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Anthropology</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Arts</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Applied Physics</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Science</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                        <p>Masters Degree (2 Years)</p>
-                        <p>Phd Degree (3 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Art History</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Media, Art, and Performance</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-                <div class="row programs p-3 pt-0">
-                    <div class="col-lg-5">
-                        <a href="">Arts (unsure of major)</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Media, Art, and Performance</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <hr class="mt-2">
-                </div>
-            </div>
-        </div>
-    </main>
-    
-    <!-- Footer -->
-    <footer class="bg-dark pt-5">
-        <div class="row container pt-4 pb-5">
-            <div class="col-lg-8">
-                <div>
-                    <a href="#" class="footer-menu" >ABOUT</a>
-                    <a href="#" class="footer-menu" >CONTACT</a>
-                    <a href="#" class="footer-menu" >PRIVACY</a>
-                    <a href="#" class="footer-menu" >USERS</a>
-                    <a href="#" class="footer-menu" >COOKIES</a>
-                </div>
-                <div class="mt-4">
-                    <small id="footer-small">© QS Quacquarelli Symonds Limited 1994 - 2021. All rights reserved. </small>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <!-- Social Icons -->
-                <div id="social-icon-bar">
-                    <div >
-                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon" alt=""></a>
-                    </div>
-                    <div >
-                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon" alt=""></a>
-                    </div>
-                    <div >
-                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon" alt=""></a>
-                    </div>
-                    <div >
-                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon" alt=""></a>
-                    </div>
-                    <div >
-                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon" alt=""></a>
-                    </div>
-                </div>
-            </div>           
-        </div>
-    </footer>
+			<!-- Program Related Box -->
+			<div class="row program-row">
+				<div class="row">
+					<!-- Title -->
+					<div class="row title p-3" id="title">
+						<div class="col-lg-5">
+							<strong>PROGRAM NAME </strong>
+						</div>
+						<div class="col-lg-4">
+							<strong>FACULTY</strong>
+						</div>
+						<div class="col-lg-3">
+							<strong>DEGREE</strong>
+						</div>
+						<hr class="mt-2 mb-2" />
+					</div>
+					<!-- Programs -->
+					<div class="row p-3">
+						<div class="col-lg-5">
+							<a href="">Accounting</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Business Administration</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Actuarial Science</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Science</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+							<p>Masters Degree (2 Years)</p>
+							<p>PhD Degree (3 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Administration (Indigenous Management) Certificate</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Centre for Continuing Education</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Certificate (1 - 2 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href=""
+								>Advanced Certificate in Local Government Administration</a
+							>
+						</div>
+						<div class="col-lg-4">
+							<p>Centre for Continuing Education</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Certificate (1 - 2 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Anthropology</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Arts</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Applied Physics</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Science</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+							<p>Masters Degree (2 Years)</p>
+							<p>Phd Degree (3 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Art History</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Media, Art, and Performance</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+					<div class="row programs p-3 pt-0">
+						<div class="col-lg-5">
+							<a href="">Arts (unsure of major)</a>
+						</div>
+						<div class="col-lg-4">
+							<p>Media, Art, and Performance</p>
+						</div>
+						<div class="col-lg-3">
+							<p>Bachelor Degree (4 Years)</p>
+						</div>
+						<hr class="mt-2" />
+					</div>
+				</div>
+			</div>
+		</main>
 
-    <!-- JS Bundle-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+		<!-- Footer -->
+		<footer class="bg-dark pt-5">
+			<div class="row container pt-4 pb-5">
+				<div class="col-lg-8">
+					<div>
+						<a href="#" class="footer-menu">ABOUT</a>
+						<a href="#" class="footer-menu">CONTACT</a>
+						<a href="#" class="footer-menu">PRIVACY</a>
+						<a href="#" class="footer-menu">USERS</a>
+						<a href="#" class="footer-menu">COOKIES</a>
+					</div>
+					<div class="mt-4">
+						<small id="footer-small"
+							>© QS Quacquarelli Symonds Limited 1994 - 2021. All rights
+							reserved.
+						</small>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<!-- Social Icons -->
+					<div id="social-icon-bar">
+						<div>
+							<a href="#" target="_blank"
+								><img src="img/footer/facebook.png" class="social-icon" alt=""
+							/></a>
+						</div>
+						<div>
+							<a href="#" target="_blank"
+								><img src="img/footer/twitter.png" class="social-icon" alt=""
+							/></a>
+						</div>
+						<div>
+							<a href="#" target="_blank"
+								><img src="img/footer/linkedin.png" class="social-icon" alt=""
+							/></a>
+						</div>
+						<div>
+							<a href="#" target="_blank"
+								><img src="img/footer/youtube.png" class="social-icon" alt=""
+							/></a>
+						</div>
+						<div>
+							<a href="#" target="_blank"
+								><img src="img/footer/instagram.png" class="social-icon" alt=""
+							/></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+		<!-- JS Bundle-->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+	</body>
 </html>
